fix visar; added cmake NEUTRINO_SKIP_PLUGINS variable

--- a/plugins/Visar/Visar.qrc
+++ b/plugins/Visar/Visar.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/icons">
         <file>refresh.png</file>
+        <file>refreshRed.png</file>
         <file>refresh2.png</file>
     </qresource>
 </RCC>
