added progressbar on module loading

--- a/UIs/nPreferences.ui
+++ b/UIs/nPreferences.ui
@@ -101,7 +101,7 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="5">
+           <item row="1" column="4">
             <widget class="QToolButton" name="getScale">
              <property name="toolTip">
               <string>get scale from current image</string>
@@ -110,7 +110,7 @@
               <string>...</string>
              </property>
              <property name="icon">
-              <iconset resource="../../build-neutrinoMaster-Brew-Release/src/qrc/icons.qrc">
+              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
                <normaloff>:/icons/autoRefresh.png</normaloff>:/icons/autoRefresh.png</iconset>
              </property>
             </widget>
@@ -124,7 +124,7 @@
               <string>...</string>
              </property>
              <property name="icon">
-              <iconset resource="../../build-neutrinoMaster-Brew-Release/src/qrc/icons.qrc">
+              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
                <normaloff>:/icons/lockOpen.png</normaloff>
                <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
              </property>
@@ -148,6 +148,13 @@
              </property>
             </widget>
            </item>
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_7">
+             <property name="text">
+              <string>Math</string>
+             </property>
+            </widget>
+           </item>
            <item row="1" column="1">
             <widget class="QToolButton" name="lockScale">
              <property name="toolTip">
@@ -157,7 +164,7 @@
               <string>...</string>
              </property>
              <property name="icon">
-              <iconset resource="../../build-neutrinoMaster-Brew-Release/src/qrc/icons.qrc">
+              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
                <normaloff>:/icons/lockOpen.png</normaloff>
                <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
              </property>
@@ -169,7 +176,7 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="4">
+           <item row="0" column="3">
             <widget class="QLineEdit" name="originY">
              <property name="toolTip">
               <string>origin y</string>
@@ -182,7 +189,7 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="5">
+           <item row="0" column="4">
             <widget class="QToolButton" name="getOrigin">
              <property name="toolTip">
               <string>get origin from current image</string>
@@ -191,12 +198,12 @@
               <string>...</string>
              </property>
              <property name="icon">
-              <iconset resource="../../build-neutrinoMaster-Brew-Release/src/qrc/icons.qrc">
+              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
                <normaloff>:/icons/autoRefresh.png</normaloff>:/icons/autoRefresh.png</iconset>
              </property>
             </widget>
            </item>
-           <item row="1" column="4">
+           <item row="1" column="3">
             <widget class="QLineEdit" name="scaleY">
              <property name="toolTip">
               <string>scale y</string>
@@ -246,6 +253,27 @@
              </property>
             </widget>
            </item>
+           <item row="4" column="1">
+            <widget class="QToolButton" name="lockMath">
+             <property name="toolTip">
+              <string>lock scale forn newly opened images</string>
+             </property>
+             <property name="text">
+              <string>...</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+               <normaloff>:/icons/lockOpen.png</normaloff>
+               <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
            <item row="2" column="2">
             <widget class="QDoubleSpinBox" name="rotate">
              <property name="decimals">
@@ -271,7 +299,7 @@
               <string>...</string>
              </property>
              <property name="icon">
-              <iconset resource="../../build-neutrinoMaster-Brew-Release/src/qrc/icons.qrc">
+              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
                <normaloff>:/icons/lockOpen.png</normaloff>
                <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
              </property>
@@ -292,7 +320,7 @@
               <string>...</string>
              </property>
              <property name="icon">
-              <iconset resource="../../build-neutrinoMaster-Brew-Release/src/qrc/icons.qrc">
+              <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
                <normaloff>:/icons/lockOpen.png</normaloff>
                <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
              </property>
@@ -304,15 +332,73 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="2" colspan="4">
-            <widget class="QFrame" name="frame">
-             <property name="frameShape">
-              <enum>QFrame::StyledPanel</enum>
-             </property>
-             <property name="frameShadow">
-              <enum>QFrame::Raised</enum>
-             </property>
+           <item row="4" column="2" colspan="3">
+            <widget class="QWidget" name="widget_2" native="true">
+             <layout class="QHBoxLayout" name="horizontalLayout_3">
+              <property name="leftMargin">
+               <number>0</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>0</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
+              <item>
+               <widget class="QLabel" name="label_12">
+                <property name="text">
+                 <string>Subtract</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="subtract">
+                <property name="text">
+                 <string>0</string>
+                </property>
+                <property name="neutrinoSave" stdset="0">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="label_13">
+                <property name="text">
+                 <string>Multiply</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="multiply">
+                <property name="text">
+                 <string>1</string>
+                </property>
+                <property name="neutrinoSave" stdset="0">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+           <item row="3" column="2" colspan="3">
+            <widget class="QWidget" name="widget_1" native="true">
              <layout class="QHBoxLayout" name="horizontalLayout">
+              <property name="leftMargin">
+               <number>0</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>0</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
               <item>
                <widget class="QCheckBox" name="flipX">
                 <property name="text">
@@ -913,7 +999,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../build-neutrinoMaster-Brew-Release/src/qrc/icons.qrc">
+           <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
             <normaloff>:/icons/remove.png</normaloff>:/icons/remove.png</iconset>
           </property>
          </widget>
@@ -927,7 +1013,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../build-neutrinoMaster-Brew-Release/src/qrc/icons.qrc">
+           <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
             <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
           </property>
          </widget>
@@ -1012,7 +1098,7 @@
  </tabstops>
  <resources>
   <include location="../plugins/Interferometry/Interferometry.qrc"/>
-  <include location="../../build-neutrinoMaster-Brew-Release/src/qrc/icons.qrc"/>
+  <include location="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
