--- a/plugins/XRD/IP.ui
+++ b/plugins/XRD/IP.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>319</width>
+    <width>335</width>
     <height>34</height>
    </rect>
   </property>
@@ -18,7 +18,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0,0,0,0,0,0">
    <property name="leftMargin">
     <number>4</number>
    </property>
@@ -31,83 +31,7 @@
    <property name="bottomMargin">
     <number>4</number>
    </property>
-   <item row="0" column="1">
-    <widget class="QToolButton" name="flipLR">
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-       <normaloff>:/icons/flipLeftRight.png</normaloff>:/icons/flipLeftRight.png</iconset>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <property name="neutrinoSave" stdset="0">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="6">
-    <widget class="QToolButton" name="saveImage">
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-       <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="3">
-    <widget class="QToolButton" name="transpose">
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-       <normaloff>:/icons/transpose.png</normaloff>:/icons/transpose.png</iconset>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <property name="neutrinoSave" stdset="0">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="2">
-    <widget class="QToolButton" name="flipUD">
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-       <normaloff>:/icons/flipUpDown.png</normaloff>:/icons/flipUpDown.png</iconset>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <property name="neutrinoSave" stdset="0">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="5">
-    <widget class="QToolButton" name="rectROI">
-     <property name="toolTip">
-      <string>rectangle parameter window</string>
-     </property>
-     <property name="text">
-      <string>...</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-       <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0">
+   <item>
     <widget class="QDoubleSpinBox" name="angle">
      <property name="toolTip">
       <string>Fringes orientation</string>
@@ -126,10 +50,86 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="4">
+   <item>
+    <widget class="QToolButton" name="flipLR">
+     <property name="text">
+      <string>...</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+       <normaloff>:/icons/flipLeftRight.png</normaloff>:/icons/flipLeftRight.png</iconset>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="neutrinoSave" stdset="0">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QToolButton" name="flipUD">
+     <property name="text">
+      <string>...</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+       <normaloff>:/icons/flipUpDown.png</normaloff>:/icons/flipUpDown.png</iconset>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="neutrinoSave" stdset="0">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QToolButton" name="transpose">
+     <property name="text">
+      <string>...</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+       <normaloff>:/icons/transpose.png</normaloff>:/icons/transpose.png</iconset>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="neutrinoSave" stdset="0">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="Line" name="line">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QToolButton" name="rectROI">
+     <property name="toolTip">
+      <string>rectangle parameter window</string>
+     </property>
+     <property name="text">
+      <string>...</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+       <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QToolButton" name="saveImage">
+     <property name="text">
+      <string>...</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+       <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
      </property>
     </widget>
    </item>
